--- a/StackOverflow-lite/CSS/sign_in.css
+++ b/StackOverflow-lite/CSS/sign_in.css
@@ -12,6 +12,20 @@
     border: 1px solid #ccc;
     box-sizing: border-box;
   }
+
+
+  .container{
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
+
+
+}
+
+ul{
+    margin: 0;
+    padding: 0
+}
   
   button {
     background-color: #4CAF50;
@@ -44,3 +58,51 @@
   
     }
   } 
+
+  header {
+    background: #ffffff;
+    color: #131111;
+    padding-top: 30px;
+    min-height: 70px;
+    border-bottom: #4CAF50 3px solid;
+
+}
+
+header a {
+    color: #e21787;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+
+}
+
+
+header li{
+    float: left;
+    display: inline;
+    padding: 0 20px 0 20px;
+}
+
+header #branding {
+    float: left;
+}
+
+
+header #branding h1{
+    margin: 0;
+}
+
+header nav {
+    float: right;
+    margin-top: 10px;
+}
+
+header .highlight, header .current a{
+    color: #f0550d;
+    font-weight: bold;
+}
+
+header a:hover{
+    color: #cccccc;
+    font-weight: bold;
+}
