Make changes to files

--- a/PYTHON/templates/about.html
+++ b/PYTHON/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {%block body %} 
-<h1> ABOUT US </h1>
+<h1> ABOUT STACKOVERFLOW LITE </h1>
 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi reiciendis reprehenderit repellat tenetur ipsum beatae corrupti corporis natus a fuga illum harum accusantium laborum aspernatur, sequi, ut tempora nesciunt itaque.</p>
 
 {% endblock %}
