--- a/PYTHON/templates/layout.html
+++ b/PYTHON/templates/layout.html
@@ -2,7 +2,11 @@
 <html>
     <head>
         <meta charset = "utf-8">
-        <title> MyAPI</title>
+        <meta name="viewport" content="width=device-width" />
+        <meta name="description" content="StackOverflow-lite is a platform where people can ask questions and provide answers." />
+		<meta name="keywords" content="code,programming,computer science,programming languages" />
+        <meta name="author" content="Kigai Phiona Mary" />
+        <title> Stack Overflow Lite </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     </head>
 
