--- a/PYTHON/templates/index.html
+++ b/PYTHON/templates/index.html
@@ -3,8 +3,8 @@
 {%block body %} 
 
 <div class = "jumbotron text-center">
-    <h1> Welcome to MyAPI</h1>
-    <p class="lead">This is my first API</p>
+    <h1> Welcome to Stack Overflow Lite</h1>
+    <p class="lead">This is a platform where users can post,view and answer questions about any computer related subjects.</p>
 </div>
 
 {% endblock %}
