--- a/PYTHON/templates/layout.html
+++ b/PYTHON/templates/layout.html
@@ -18,5 +18,27 @@
         </div>
 
         <script  scr="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+    </div>
+    <style>
+        .footer {
+            color: #fff;
+            background-color: #333331;
+            text-align: center;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 50px;
+            color: white;
+            text-align: center;
+        }
+        </style>
+        
+        <div class="footer">
+            <p>Phii, copyright &copy; 2018 </p>
+        </div> 
+
     </body>
 </html>
