--- a/CSS/UserProfile.css
+++ b/CSS/UserProfile.css
@@ -78,3 +78,16 @@ header a:hover{
     color: #cccccc;
     font-weight: bold;
 }
+
+.footer {
+    color: #fff;
+    background-color: #333331;
+    text-align: center;
+    position: float;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    color: white;
+    text-align: center;
+}
