--- a/CSS/sign_up.css
+++ b/CSS/sign_up.css
@@ -1,23 +1,30 @@
-* {box-sizing: border-box}
 
-  input[type=text], input[type=password] {
-    height: 50px;
-    width: 250px;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
+ form {
+  border: 3px solid #f1f1f1;
 }
 
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+input[type=text], input[type=password] {
+  height: 50px;
+  width: 250px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
+
+.container{
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
+
+
+}
+
+ul{
+  margin: 0;
+  padding: 0
 }
 
 button {
@@ -29,37 +36,28 @@ button {
   cursor: pointer;
   height: 50px;
   width: 250px;
-  opacity: 0.9;
 }
 
 button:hover {
-  opacity:1;
-
-}
-
- .Sign Up btn {
-  float: left;
-  height: 50px;
-  width: 250px;
+  opacity: 1;
 }
 
 .container {
   padding: 16px;
 }
 
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
+span.psw {
+  float: right;
+  padding-top: 16px;
 }
 
 @media screen and (max-width: 300px) {
- .signupbtn {
-    height: 50px;
-    width: 250px;
-  }
-}
+  span.psw {
+      display: block;
+      float: none;
 
+  }
+} 
 
 header {
   background: #ffffff;
@@ -108,3 +106,16 @@ header a:hover{
   color: #cccccc;
   font-weight: bold;
 }
+
+.footer {
+          color: #fff;
+          background-color: #333331;
+          text-align: center;
+          position: float;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 50px;
+          color: white;
+          text-align: center;
+      }
